move some streetlights to new manager, hopefully improve performance

--- a/Dynamic Lights.csproj
+++ b/Dynamic Lights.csproj
@@ -105,6 +105,6 @@
     <Error Condition="!Exists('packages\BepInEx.Core.5.4.11\build\BepInEx.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\BepInEx.Core.5.4.11\build\BepInEx.Core.targets'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>call "$(ProjectDir)postBuild.bat"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y "Dynamic Lights.dll" "E:\Program Files\Sailwind -BepInEx\BepInEx\plugins"</PostBuildEvent>
   </PropertyGroup>
 </Project>
